[package]
name = "colorfyi"
version = "0.1.0"
edition = "2021"
authors = ["FYIPedia"]
description = "Color conversion, WCAG contrast, and color space lookup — async API client for colorfyi.com."
license = "MIT"
repository = "https://github.com/fyipedia/colorfyi-rs"
homepage = "https://colorfyi.com"
documentation = "https://docs.rs/colorfyi"
readme = "README.md"
keywords = ["color", "hex", "rgb", "wcag", "css"]
categories = ["api-bindings", "data-structures"]

exclude = ["target/", "demo.gif", "demo.tape"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
